# resume-insight

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  build.sh  docker-compose.yml
prompts/: README.md  resume_analysis.md
prompts/jobs/: default.md  devops-engineer.md  frontend-engineer.md  fullstack-engineer.md  rust-backend-engineer.md
src/: config.rs  error.rs  handlers.rs  logger.rs  main.rs  prompts.rs
src/entities/: mod.rs  prelude.rs  resume.rs
src/migration/: m20240129_create_resumes.rs  mod.rs
src/models/: analysis.rs  llm.rs  mod.rs  response.rs
src/repositories/: mod.rs  resume_repo.rs
src/services/: analyzer.rs  mod.rs
