[package]
name = "resume-insight"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web 框架
axum = { version = "0.7", features = ["multipart"] }
tower-http = { version = "0.5", features = ["cors", "trace", "limit", "fs"] }

# 异步运行时
tokio = { version = "1.40", features = ["full"] }

# HTTP 客户端（调用 LLM API）
reqwest = { version = "0.12", features = ["json"] }

# SHA256 计算（文件去重）
sha2 = "0.10"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# XML 解析
quick-xml = { version = "0.36", features = ["serialize"] }

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 时间处理（用于日志时间戳）
chrono = "0.4"

# 环境变量
dotenvy = "0.15"

# ORM（类似 TypeORM）
sea-orm = { version = "0.12", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros"] }
sea-orm-migration = { version = "0.12", features = ["sqlx-sqlite", "runtime-tokio-native-tls"], default-features = false }
# UUID 生成
uuid = { version = "1.0", features = ["v4", "serde"] }

[[bin]]
name = "resume-insight"
path = "src/main.rs"
